Integrate Medical Chest Certificate (poco, model,dal,bl,html,js)

--- a/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
@@ -35,6 +35,10 @@
 
 
 <div class="">
+    <div class="head_title">
+        <h1 class="ta">Medivac</h1>
+        <input type="hidden" id="CIRMId" />
+    </div>
     <ul class="container--tabs">
         <li class="tab tabs--active">Vessel Details</li>
         <li class="tab">Voyage Details</li>
