--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -136,7 +136,8 @@
                 <ul class="menu_Sub">
                     <li><a href="@Url.Action("Index2", "Equipments" )">Medicine</a></li>
                     <li><a href="@Url.Action("Index", "Equipments" )">Medical Equipment</a></li>
-                    <li><a href="@Url.Action("MedicalChestCertificate", "Equipments" )">Medical Chest Certificate</a></li>
+                    @*<li><a href="@Url.Action("MedicalChestCertificate", "Equipments" )">Medical Chest Certificate</a></li>*@
+                    <li><a href="@Url.Action("MedicalChestCertificate", "MedicalChest" )">Medical Chest Certificate</a></li>
                 </ul>
             </li>
             <li class="">
