--- a/TM.RestHour/Views/OvertimeCalculation/Index.cshtml
+++ b/TM.RestHour/Views/OvertimeCalculation/Index.cshtml
@@ -110,7 +110,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="FixedOvertime">Fixed Overtime</label>
-                                    <input type="number" class="form-control" id="FixedOvertime" placeholder="Fixed Overtime" />
+                                    <input type="number" class="labelmax form-control" id="FixedOvertime" placeholder="Fixed Overtime" value='0' min="1" max="160" />
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -139,7 +139,7 @@
 
 
 
-
+                            <input type="submit">
 
 
                             <button type="button" class="button1" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">Show</button>
@@ -153,10 +153,8 @@
 
 
         @*<div class="col-md-7 bac">
-                <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
-            </div>*@
-
-
+            <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
+        </div>*@
 
 
     </div>
@@ -175,6 +173,19 @@
 
     <script type="text/javascript">
         //alert('hi');
+
+
+        document.getElementsByClassName('labelmax form-control')[0].oninput = function () {
+        var max = parseInt(this.max);
+
+        if (parseInt(this.value) > max) {
+            this.value = max; 
+        }
+    }
+
+
+
+
 
         $(document).ready(function () {
 
