--- a/TM.RestHour/css/style.css
+++ b/TM.RestHour/css/style.css
@@ -5410,7 +5410,7 @@ body::-webkit-scrollbar {
     position: relative;
     background: #F9F9F9;
     margin: 0;
-    z-index: 22;
+    /*z-index: 22;*/
     border-radius: 0px;
     padding: 100px 30px 30px 30px;
 }
@@ -15846,3 +15846,50 @@ button:disabled {
         width: 196px;
         text-align: left;
     }
+
+.newcard {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.25rem;
+    padding: 20px 30px;
+    margin: 0 0 20px 0;
+}
+
+.points-no {
+    font-size: 20px;
+    text-align: center;
+    margin: 31px 0 0;
+}
+
+.imguplodimg img {
+    width:100%;
+}
+
+.imguplodimg a {
+    background: #a479f8;
+    color: #fff;
+    padding: 8px 20px;
+    border-radius: 6px;
+    display: inline-block;
+    margin: 20px 0;
+}
+
+.uploadbtn a {
+    background: #121d36;
+    color: #fff;
+    padding: 8px 20px;
+    border-radius: 6px;
+}
+.modal-header .close {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+.modal-content img{width:100%;}
