--- a/TM.RestHour/Views/OvertimeCalculation/Index.cshtml
+++ b/TM.RestHour/Views/OvertimeCalculation/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model TM.Base.Entities.OvertimeCalculationPOCO
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -73,6 +73,7 @@
 </style>
 
 @Html.Hidden("SaveOvertimeCalculation", @Url.Action("SaveOvertimeCalculation", "OvertimeCalculation"))
+@Html.Hidden("GetOvertimeCalculation", @Url.Action("GetOvertimeCalculation", "OvertimeCalculation"))
 
 <body>
     <div class="row">
@@ -114,18 +115,19 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
+                                <input type="hidden" id="isWeekly" name="isWeekly" value="">
                                 <div class="form-group">
                                     <label for="HoursPerWeekOrMonth">Hours Per Week/Month</label>
                                     <div class="col-sm-6 col-xs-6">
-                                        <input type="radio" name="HoursPerWeekOrMonth" value="1" checked> Month
+                                        <input type="radio" id="Month" name="HoursPerWeekOrMonth" value="0"> Month
                                     </div>
                                     <div class="col-sm-6 col-xs-6">
-                                        <input type="radio" name="HoursPerWeekOrMonth" value="0"> Week
+                                        <input type="radio" id="Week" name="HoursPerWeekOrMonth" value="1" checked> Week
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="form-group">
+                                <div class="form-group" id="week">
                                     <div><input id="Mon" type="checkbox">Mon<span id="Mon-value" class="output" style="color:#fff"></span></div>
                                     <div><input id="Tue" type="checkbox">Tue<span id="Tue-value" class="output" style="color:#fff"></span></div>
                                     <div><input id="Wed" type="checkbox">Wed<span id="Wed-value" class="output" style="color:#fff"></span></div>
@@ -138,11 +140,7 @@
                             </div>
 
 
-
-                            <input type="submit">
-
-
-                            <button type="button" class="button1" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">Show</button>
+                            <button type="button" class="button1" id="btnShow" onclick="return SaveOvertimeCalculation();" style="width:138px;">Save</button>
 
 
                         </div>
@@ -153,8 +151,11 @@
 
 
         @*<div class="col-md-7 bac">
-            <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
-        </div>*@
+                <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
+            </div>*@
+
+
+
 
 
     </div>
@@ -174,14 +175,32 @@
     <script type="text/javascript">
         //alert('hi');
 
+        //
+
+        $('input[name="HoursPerWeekOrMonth"]').on('click', function () {
+            var x = $('input[name="HoursPerWeekOrMonth"]:checked').val();
+
+            if (x === '0') {
+                EnableWeek();
+                //$('#FixedOvertime').prop('disabled', false);
+            } else {
+                EnableMonth();
+            }
+
+            console.log(x);
+        });
+
+
+
+
 
         document.getElementsByClassName('labelmax form-control')[0].oninput = function () {
-        var max = parseInt(this.max);
+            var max = parseInt(this.max);
 
-        if (parseInt(this.value) > max) {
-            this.value = max; 
+            if (parseInt(this.value) > max) {
+                this.value = max;
+            }
         }
-    }
 
 
 
@@ -189,6 +208,7 @@
 
         $(document).ready(function () {
 
+            GetOvertimeCalculation();
             //SetUpGrid();
             //SetUpGridloadDataPrint();
             $("#DailyWorkHours").change(function () {
@@ -197,25 +217,14 @@
 
 
 
-            function calc()         //FixedWorkHour  DailyWorkHours   
-            {
-                if ($('#DailyWorkHours').val() === '8') {
-                    $('#FixedWorkHour').val('44');
-                }
-                if ($('#DailyWorkHours').val() === '9') {
-                    $('#FixedWorkHour').val('49');
-                }
-                if ($('#DailyWorkHours').val() === '7') {
-                    $('#FixedWorkHour').val('39');
-                }
-            }
+
         });
 
 
         $(function () {
 
             function outputMon(state, value) {
-                $('#Mon-value').text(value); 
+                $('#Mon-value').text(value);
             }
             function outputTue(state, value) {
                 $('#Tue-value').text(value);
