--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -287,7 +287,7 @@
                                         <div class="profile_info_details">
                                             <a href="#">My Profile </a>
                                             <a href="#">Settings</a>
-                                            <a href="#">Log Out </a>
+                                            <a href="@Url.Action("Index", "Login")" onclick="alert('You are successfully logged off');">Log Out</a>
                                         </div>
                                     </div>
                                 </div>
